--- a/fmadmin/uni_modules/uni-fab/package.json
+++ b/fmadmin/uni_modules/uni-fab/package.json
@@ -1,15 +1,14 @@
 {
-  "id": "uni-list",
-  "displayName": "uni-list 列表",
-  "version": "1.2.14",
-  "description": "List 组件 ，帮助使用者快速构建列表。",
+  "id": "uni-fab",
+  "displayName": "uni-fab 悬浮按钮",
+  "version": "1.2.5",
+  "description": "悬浮按钮 fab button ，点击可展开一个图标按钮菜单。",
   "keywords": [
-    "",
     "uni-ui",
     "uniui",
-    "列表",
-    "",
-    "list"
+    "按钮",
+    "悬浮按钮",
+    "fab"
 ],
   "repository": "https://github.com/dcloudio/uni-ui",
   "engines": {
@@ -39,10 +38,7 @@
     "type": "component-vue"
   },
   "uni_modules": {
-    "dependencies": [
-      "uni-badge",
-      "uni-icons"
-    ],
+    "dependencies": ["uni-scss","uni-icons"],
     "encrypt": [],
     "platforms": {
       "cloud": {
