--- a/fmadmin/uniCloud-aliyun/cloudfunctions/fmmyaddress/package.json
+++ b/fmadmin/uniCloud-aliyun/cloudfunctions/fmmyaddress/package.json
@@ -1,6 +1,8 @@
 {
   "name": "fmmyaddress",
-  "dependencies": {},
+  "dependencies": {
+    "uni-id-common": "file:../../../uni_modules/uni-id-common/uniCloud/cloudfunctions/common/uni-id-common"
+  },
   "extensions": {
     "uni-cloud-jql": {}
   }
