--- a/fmadmin/uniCloud-aliyun/cloudfunctions/fm-cart/package.json
+++ b/fmadmin/uniCloud-aliyun/cloudfunctions/fm-cart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fmcart",
+  "name": "fm-cart",
   "dependencies": {
     "uni-id-common": "file:../../../uni_modules/uni-id-common/uniCloud/cloudfunctions/common/uni-id-common"
   },
