--- a/fmadmin/uniCloud-aliyun/cloudfunctions/fm-address/package.json
+++ b/fmadmin/uniCloud-aliyun/cloudfunctions/fm-address/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fmmyaddress",
+  "name": "fm-address",
   "dependencies": {
     "uni-id-common": "file:../../../uni_modules/uni-id-common/uniCloud/cloudfunctions/common/uni-id-common"
   },
