--- a/fmuserapp/manifest.json
+++ b/fmuserapp/manifest.json
@@ -65,7 +65,8 @@
 		"usingComponents": true
 	},
 	"uniStatistics": {
-		"enable": false
+		"enable": false,
+		"version": "2"
 	},
 	"vueVersion": "3",
 	"h5": {
