--- a/stfarmapp/manifest.json
+++ b/stfarmapp/manifest.json
@@ -2,7 +2,7 @@
     "name" : "stfarmapp",
     "appid" : "__UNI__D5F6F2D",
     "description" : "云端一体应用快速开发基本项目模版",
-    "versionName" : "",
+    "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
     "app-plus" : {
@@ -67,5 +67,19 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "3"
+    "vueVersion" : "3",
+    "h5" : {
+        "title" : "福农农户APP",
+        "router" : {
+            "base" : "/stfarm/",
+            "mode" : "history"
+        },
+        "sdkConfigs" : {
+            "maps" : {
+                "qqmap" : {
+                    "key" : ""
+                }
+            }
+        }
+    }
 }
