--- a/stfarmapp/manifest.json
+++ b/stfarmapp/manifest.json
@@ -15,9 +15,7 @@
             "autoclose" : true,
             "delay" : 0
         },
-        "modules" : {
-            "OAuth" : {}
-        },
+        "modules" : {},
         "distribute" : {
             "android" : {
                 "permissions" : [
@@ -98,11 +96,7 @@
             "mode" : "history"
         },
         "sdkConfigs" : {
-            "maps" : {
-                "qqmap" : {
-                    "key" : ""
-                }
-            }
+            "maps" : {}
         },
         "uniStatistics" : {
             "debug" : true,
